# gen_ai

./: .gitignore  README.md  Untitled.ipynb  hi.txt  solution.ipynb
PEFT/: lora_causallm.ipynb  qlora_causallm.ipynb
RAG/: RAG_Systems_with_Transformers.ipynb
aisuite/: aisuit_.py
crew/crew_rnd/: README.md  pyproject.toml  report.md
crew/crew_rnd/src/crew_rnd/: crew.py  main.py
crew/latest_ai_development/: README.md  pyproject.toml  report.csv  report.md
crew/latest_ai_development/src/latest_ai_development/: crew.py  main.py
llamaIndex-rag/data/: data.txt
open_webui/: README.md
rag-fastapi/: README.md  main.py  rag_pipeline.py
rag-llamaIndex/: RAG_Systems_with_Transformers.ipynb  Untitled.ipynb  llama_index_chunking.ipynb  rag_all_llm_providers.ipynb
rnds/: multimodal_rag_huggingface_implementation.ipynb
thellmbook/: 2.tokenizer.ipynb  Untitled.ipynb  chapter_1_1.first_code.ipynb  chapter_2_2.contextual_word_embedding.ipynb  chapter_2_3.word_embedding.ipynb  chapter_3_1.language_model.ipynb  chapter_4_1_text_classification.ipynb  chapter_4_2.text_classification_generative_models.ipynb  chapter_5_1.text_clustering.ipynb  chapter_6_1.Prompt_Engineering.ipynb  chapter_7_1.advance_text_generation_tech_and_tools.ipynb  first_code.ipynb  requirements.txt
unsloth/: Untitled.ipynb
