[project]
name = "crew_rnd"
version = "0.1.0"
description = "crew_rnd using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
crew_rnd = "crew_rnd.main:run"
run_crew = "crew_rnd.main:run"
train = "crew_rnd.main:train"
replay = "crew_rnd.main:replay"
test = "crew_rnd.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
